# utils

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  .prettierrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  conanfile.txt  tasks.md
.devcontainer/aarch64-none-linux-gnu-gcc-13/: devcontainer.json
.devcontainer/arm-none-eabi-gcc-13/: devcontainer.json
.devcontainer/clang-18/: devcontainer.json
.devcontainer/gcc-13/: devcontainer.json
.github/workflows/: build-test-baremetal.yml  build-test-linux.yml  code-coverage.yml  static-analysis.yml
.gitlab/ci/: build-freertos.yml  build-tests-freertos.yml  coverage-linux.yml  quality.yml  run-tests-freertos.yml  run-tests-linux.yml  run-valgrind-linux.yml  sanitizers-linux.yml  test-linux.yml  valgrind-linux.yml
cmake/: compilation-flags.cmake  components.cmake  conan.cmake  conan_provider.cmake  coverage.cmake  liballocator.cmake  platform.cmake
cmake/modules/: Findosal.cmake  Findplatform.cmake  Findstm32f4xx.cmake  Findutils.cmake
cmake/presets/: app.json  baremetal.json  dependencies.json  linux.json  type.json
docs/specs/: new-components.md
lib/: CMakeLists.txt
lib/bits/: CMakeLists.txt
lib/bits/include/utils/: bits.hpp
lib/bits/include/utils/bits/: endianness.hpp  numerics.hpp
lib/debug/: CMakeLists.txt  EventStats.cpp
lib/debug/include/utils/debug/: EventStats.hpp  logger.hpp
lib/fsm/: CMakeLists.txt
lib/fsm/include/utils/fsm/: ExecuteAround.hpp  IState.hpp  StateMachine.hpp  logger.hpp
lib/functional/: CMakeLists.txt
lib/functional/include/utils/functional/: ExecAround.hpp  ExecuteAround.hpp  ScopedExit.hpp
lib/include/utils/: GlobalRegistry.hpp
lib/info/: CMakeLists.txt  git.cpp  version.cpp
lib/info/include/utils/: git.hpp  version.hpp
lib/logger/: CMakeLists.txt
lib/logger/compatibility/: condition_variable  mutex  syscalls.hpp  thread
lib/logger/include/utils/: Logger.hpp
lib/logger/include/utils/logger/: Logger.hpp
lib/logger/spdlog-1.6.0/include/spdlog/details/: os-inl.h
lib/logger/spdlog-1.7.0/: CMakeLists.txt
lib/network/: CMakeLists.txt  Connection.cpp  Error.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  types.cpp
lib/network/include/utils/network/: Connection.hpp  Error.hpp  TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp  logger.hpp  types.hpp
lib/preprocessor/: CMakeLists.txt
lib/preprocessor/include/utils/preprocessor/: symbols.hpp
lib/property/: CMakeLists.txt
lib/property/include/utils/: property.hpp
lib/registry/: CMakeLists.txt
lib/registry/include/utils/: GlobalRegistry.hpp
lib/registry/include/utils/registry/: Error.hpp  GlobalRegistry.hpp
lib/sm/: CMakeLists.txt
lib/sm/include/utils/sm/: IState.hpp  StateMachine.hpp  logger.hpp
lib/types/: CMakeLists.txt
lib/types/include/utils/types/: Result.hpp  property.hpp  traits.hpp
lib/watchdog/: CMakeLists.txt  Error.cpp  Watchdog.cpp
lib/watchdog/include/utils/watchdog/: Error.hpp  Watchdog.hpp  logger.hpp
test/: CMakeLists.txt  EventStats.cpp  ExecAround.cpp  GlobalRegistry.cpp  Logger.cpp  Result.cpp  ScopedExit.cpp  StateMachine.cpp  TcpClient.cpp  TcpServer.cpp  VerboseReporter.hpp  Watchdog.cpp  appMain.cpp  bits.cpp  property.cpp
test/init/: platformInit.hpp
test/init/freertos-arm/: CMakeLists.txt  platformInit.cpp  stm32f4discovery.ld
test/init/linux/: platformInit.cpp
test/init/linux-arm/: platformInit.cpp
test/network/: CMakeLists.txt  Error.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  types.cpp
tests/: .clang-tidy  CMakeLists.txt  ExecAround.cpp  GlobalRegistry.cpp  Logger.cpp  Result.cpp  ScopedExit.cpp  StateMachine.cpp  Watchdog.cpp  appMain.cpp  bits.cpp  main.cpp  property.cpp
tests/helpers/: CMakeLists.txt
tests/helpers/include/tests/helpers/: VerboseReporter.hpp
tests/init/: CMakeLists.txt
tests/init/freertos-arm/: CMakeLists.txt  FreeRTOSConfig.h  init.cpp  stm32f407vgtx.ld  stm32f4xx_hal_conf.h
tests/init/include/platform/: init.hpp
tests/network/: TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  types.cpp
tools/: adjust-compilation-db.py  check-clang-format.sh  check-clang-tidy.sh  run-clang-format.py  run-clang-tidy.py
